# rsync-backup

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac
client/: Makefile.am  authorized_keys.template  authorized_keys.template.in  rsync-backup-client  rsync-backup-home.conf  rsync-backup-sudoers  rsync-backup-user.conf
server/: Makefile.am  rsync-backup  rsync-backup.1.md  rsync-backup.conf  rsync-backup.in
server/systemd/: rsync-backup.service.in  rsync-backup.timer
